--- a/IEEE_EMB/IEEE_EMB/wwwroot/css/site.css
+++ b/IEEE_EMB/IEEE_EMB/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss/base';
+﻿@import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import 'https://unpkg.com/aos@next/dist/aos.css';
