--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
@@ -41,6 +41,9 @@
                             <a class="nav-link" asp-page="/Contact">Contact</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" asp-page="/Profile">Profile</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" asp-page="/Join">Join</a>
                         </li>
                         <li class="nav-item dropdown">
