forms with problems in style

--- a/IEEE_EMB/IEEE_EMB/Pages/Join.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Join.cshtml
@@ -47,7 +47,7 @@
                         <span>Join research collaborations</span>
                     </li>
                 </ul>
-                <a href="/apply/member" class="apply-button group">
+                <a href="/MemberForm" class="apply-button group">
                     Apply as Member
                     <i class="fas fa-arrow-right transition-transform group-hover:translate-x-2"></i>
                 </a>
@@ -74,7 +74,7 @@
                         <span>Lead research initiatives</span>
                     </li>
                 </ul>
-                <a href="/apply/mentor" class="apply-button group">
+                <a href="/MentorForm" class="apply-button group">
                     Apply as Mentor
                     <i class="fas fa-arrow-right transition-transform group-hover:translate-x-2"></i>
                 </a>
