--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - IEEE BioInformatics</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    @* <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> *@
     <link rel="stylesheet" href="~/css/navigation.css" />
+    <script src="~/js/tailwind.config.js" ></script>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     @await RenderSectionAsync("Styles", required: false)
 </head>
@@ -47,13 +49,16 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-page="/Join">Join</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-page="/Login">Login</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="activitiesDropdown" role="button" data-bs-toggle="dropdown">
                                 Activities
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Competitions</a></li>
-                                <li><a class="dropdown-item" href="#">Workshops</a></li>
+                                <li><a class="dropdown-item" asp-page="/Seminars">Seminars</a></li>
+                                <li><a class="dropdown-item" asp-page="/Workshops">Workshops</a></li>
                                 <li><a class="dropdown-item" href="#">Journal Club</a></li>
                             </ul>
                         </li>
